# distributed-file-system

./: README.org  build.sh  docker-compose.yaml  fileSystem.cabal  index.html  stack.yaml
API/: API.cabal  stack.yaml
API/src/Authentication/: API.hs
API/src/Directory/: API.hs
API/src/File/: API.hs
API/src/FileServer/: API.hs
API/src/Shared/: API.hs
API/src/Transaction/: API.hs
Auth/: Auth.cabal  stack.yaml
Auth/app/: Main.hs
Auth/src/Auth/: API.hs  Auth.hs  Client.hs  Internal.hs  Service.hs  Session.hs  notes.org
Client-API/: Client-API.cabal  stack.yaml
Client-API/src/Client/:  *Minibuf-1*  API.hs
Client-App/: Client-App.cabal  stack.yaml
Client-App/src/: Main.hs
Dir/: Dir.cabal  poo.txt  stack.yaml  test.txt
Dir/app/: Main.hs
Dir/src/Dir/: API.hs  Client.hs  Dir.hs  Service.hs  notes.org
FileSystem/: FileSystem.cabal  TAGS  stack.yaml
FileSystem/app/: Main.hs
FileSystem/src/FileSystem/: API.hs  FileSystem.hs  Gossip.hs  Service.hs
Servant/: Servant.cabal
Servant/src/: FSHandler.hs  File.hs  Session.hs  notes.org
Token/: Token.cabal  stack.yaml
Token/src/Token/: Generate.hs  Store.hs  Token.hs
Transction/: Transction.cabal  stack.yaml
Transction/app/: Main.hs
Transction/src/Lock/: Lock.hs
Transction/src/Service/: Client.hs  Service.hs
Utils/: Utils.cabal  stack.yaml
Utils/src/Utils/: Client.hs  Error.hs  FSHandler.hs  InternalAuth.hs  ReaderHandler.hs  Session.hs
Utils/src/Utils/Data/: Auth.hs  File.hs
authServer/: authServer.cabal  stack.yaml
authServer/app/: Main.hs
authServer/src/: Auth.hs
auth_server/: fileSystem.cabal  stack.yaml
auth_server/app/: Main.hs
auth_server/src/: Auth.hs
src/: Auth.hs
