name:                Auth
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Auth#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/Auth
  exposed-modules:     Auth
                     , Auth.Service
                     , Auth.API
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , servant
                     , pwstore-fast
                     , warp
                     , Token
                     , cgi
                     , hedis
                     , bytestring >= 0.10
  default-language:    Haskell2010

executable authServer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Auth
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Auth
