name:                Auth
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Auth#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/Auth
  exposed-modules:     Auth
                     , Auth.Service
                     , Auth.API
                     , Auth.Client
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server >= 0.9.1.1
                     , servant-client >=  0.9.1.1
                     , servant >= 0.9.1.1
                     , Servant
                     , stm
                     , split
                     , network >= 2.6
                     , pwstore-fast
                     , warp
                     , mtl >= 2.2
                     , wai >= 3.2
                     , Token
                     , Dir
                     , cgi
                     , http-client >= 0.4
                     , hedis
                     , bytestring >= 0.10
  default-language:    Haskell2010

executable authServer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Auth
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Auth
