name:                Dir
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Dir#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/Dir
  exposed-modules:     Dir
                     , Dir.API
                     , Dir.Service
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-server >= 0.8
                     , bytestring
                     , aeson >= 0.11
                     , stm
                     , Token
                     , unordered-containers
                     , text
                     , strict
                     , Auth
                     , hedis
                     , directory >= 1.2
                     , wai >= 3.2
                     , warp >= 3.2
                     , cgi >= 3001.3
  default-language:    Haskell2010

executable dirServer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Dir
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Dir
