name:                Dir
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Dir#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/Dir
  exposed-modules:     Dir
                     , Dir.Service
                     , Dir.Client
  build-depends:       base >= 4.7 && < 5
                     , servant >= 0.9.1.1
                     , servant-server >= 0.9.1.1
                     , servant-client >= 0.9.1.1
                     , Utils
                     , API
                     , bytestring
                     , aeson >= 0.11
                     , stm
                     , transformers
                     , mtl
                     , random-extras >= 0.19
                     , random-fu
                     , Token
                     , http-client >= 0.4
                     , network >= 2.6
                     , filepath
                     , unordered-containers
                     , text
                     , strict
                     , hedis
                     , directory >= 1.2
                     , wai >= 3.2
                     , warp >= 3.2
  default-language:    Haskell2010

executable dirServer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Dir
                     , API
                     , Token
                     , servant >= 0.9.1.1
                     , servant-client >= 0.9.1.1
                     , http-client >= 0.4
                     , split
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Dir
