name:                FileSystem
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/FileSystem#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                       src/FileSystem
  exposed-modules:     FileSystem
                     , FileSystem.API
                     , FileSystem.Gossip
                     , FileSystem.Service
  build-depends:       base >= 4.7 && < 5
                     , servant >= 0.9.1.1
                     , servant-server >= 0.9.1.1
                     , servant-client >= 0.9.1.1
                     , Auth
                     , Token
                     , bytestring >= 0.10
                     , Servant
                     , hedis
                     , stm
                     , mtl
                     , http-client >= 0.4
                     , warp >= 3.2
                     , mysql-simple
                     , Dir
  default-language:    Haskell2010

executable fileSystem-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , FileSystem
                     , mysql-simple >= 0.4
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/FileSystem
