name:                Transction
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Transction#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/Lock
                     , src/Trans
                     , src/Service
  exposed-modules:     Lock
                     , Service
                     , Service.Client
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , Utils
                     , servant-server >= 0.9.1.1
                     , servant >= 0.9.1.1
                     , servant-client >= 0.9.1.1
                     , http-client
                     , stm
                     , mtl
                     , Token
                     , hedis
                     , warp
                     , API
  default-language:    Haskell2010

executable Transction-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Transction
                     , servant >= 0.9
                     , API
                     , Token
                     , http-client >= 0.4
                     , servant-client >= 0.9
                     , split >= 0.2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Transction
