name:                Utils
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Utils#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/Utils/
                     , src/Utils/Data
  exposed-modules:     Utils.Session
                     , Utils.ReaderHandler
                     , Utils.InternalAuth
                     , Utils.Error
                     , Utils.Data.File
                     , Utils.Data.Auth
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , Token
                     , hedis
                     , servant-server >= 0.9.1.1
                     , servant-client >= 0.9.1.1
                     , servant >= 0.9.1.1
                     , network
                     , http-client >= 0.4
                     , aeson >= 0.11
                     , base64-bytestring
                     , base64-bytestring
                     , text >= 1.2
                     , directory >= 1.2
                     , warp
                     , wai
                     , mtl
                     , cgi
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Utils
